# numbergame

./: .dockerignore  .editorconfig  .justfile  Cargo.toml  Dockerfile  Earthfile  ReadMe.md  devbox.json  game.yml
.github/workflows/: release.yml
src/: config_reader.rs  game.rs  main.rs  ntree.rs
